# prisma-rustrover-bug

./: Cargo.toml  README.md
prisma/: schema.prisma
src/: main.rs
